<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:backgroundTint="@color/colorPrimary"
                                                   android:background="#FFFFFF">
    <TextView
            android:text="@string/periodo"
            style="@style/AppTheme.PrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textPeriod"
            android:textSize="28sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="92dp"
            android:textColor="#FFFFFF" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.73"/>
    <TextView
            android:text="@string/date_format"
            style="@style/Widget.MaterialComponents.MaterialCalendar.DayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textDate"
            android:textSize="22"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textColor="#E8E8E8"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="22dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textTime" app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.1"/>
    <TextView
            android:text="@string/distancia_no_break"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textSize="18sp"
            android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textTime" android:layout_marginTop="108dp"/>
    <TextView
            android:text="@string/time_spent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textTime"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPeriod" android:layout_marginTop="8dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:textSize="18sp"
            android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/calorias_no_break"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView18"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp" android:textSize="18sp"
            android:textColor="#FFFFFF"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18" android:background="#FDFDFD"
            android:backgroundTint="#FFFFFF">
        <TextView
                android:text="@string/management"
                style="@style/AppTheme.PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView20"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/textObsField"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.5" android:hint="@string/obs"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
        <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="16dp"/>
        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/obs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView21"
                app:layout_constraintStart_toStartOf="@+id/textObsField"
                app:layout_constraintBottom_toTopOf="@+id/textObsField" android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
